2008-12-01  Kenichi Handa  <handa@m17n.org>

	* international/uni-numeric.el: Re-generated.

	* international/charprop.el: Re-generated.

2008-12-01  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (locale-preferred-coding-systems):
	Fix alist item.

2008-12-01  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-cache-data-changed): New defvar.
	(tramp-set-connection-property, tramp-flush-connection-property)
	(tramp-dump-connection-properties): Use it.

2008-11-30  Chong Yidong  <cyd@stupidchicken.com>

	* wdired.el (wdired-finish-edit): If displaying a single file,
	change dired-directory if that file was renamed.

	* emacs-lisp/byte-run.el (macro-declaration-function): Disallow
	declare specs with lengths of 3 or more.

	* dirtrack.el (dirtrack): Fix error message.

2008-11-30  Glenn Morris  <rgm@gnu.org>

	* vc-svn.el (vc-svn-diff-switches): Doc fix.
	(vc-svn-diff): Fix the case where vc-svn-diff-switches is nil.

	* vc-git.el (vc-git-diff):
	* vc-hg.el (vc-hg-diff):
	* vc-mtn.el (vc-mtn-diff): No need to duplicate vc-switches logic.

	* eshell/esh-proc.el (eshell-needs-pipe): New variable.
	(eshell-needs-pipe-p): New function.
	(eshell-gather-process-output): Set process-connection-type according to
	eshell-needs-pipe-p.  (Bug#1388)

2008-11-30  Juanma Barranquero  <lekktu@gmail.com>

	* calendar/diary-lib.el (diary-cyclic): Doc fix.
	(diary-remind-message, diary-number-of-entries)
	(diary-include-other-diary-files, diary-mark-included-diary-files)
	(diary-view-entries, diary-date, diary-block, diary-insert-entry-1)
	(diary-font-lock-keywords-1): Reflow docstrings.
	(diary-add-to-list, calendar-mark-1, diary-entry-time, diary-make-date)
	(diary-anniversary, diary-date-display-form): Fix typos in docstrings.

	* emacs-lisp/timer.el (timer-duration-words): Fix typo in docstring.
	(timer-duration): Use `string-match-p'.

2008-11-29  Chong Yidong  <cyd@stupidchicken.com>

	* complete.el (PC-do-complete-and-exit): Use