@@ -1,3 +1,8 @@
+2008-12-01  Andreas Schwab  <schwab@suse.de>
+
+	* dired.el (dired-font-lock-keywords): Avoid fontifying file names
+	ending in a colon as directory header.
+
 2008-12-01  Kenichi Handa  <handa@m17n.org>
 
 	* international/uni-numeric.el: Re-generated.
